# Spotify_Project

./: .cache  README.md  app.py  pyproject.toml
assets/: styles.css
pages/: artist-analysis.py  features-analysis.py  overview.py  track-analysis.py
